hw2/err
Match.cpp:28:22: error: expected type-specifier before ‘(’ token
         bool operator(const item &a, const item &b){
                      ^
Match.cpp: In function ‘void print_total(std::ostream&, const std::vector<Match>&)’:
Match.cpp:40:25: error: expected primary-expression before ‘;’ token
         const auto &m = ;
                         ^
Match.cpp:55:5: error: expected primary-expression before ‘}’ token
     }
     ^
